{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 69,
  "lineage": "2283a073-bb47-ba19-d220-35c5cbb46fb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd93e888bfc01691",
            "arn": "arn:aws:ec2:us-east-1:549661018596:elastic-ip/eipalloc-0fd93e888bfc01691",
            "association_id": "eipassoc-0be43fa91830a62e9",
            "domain": "vpc",
            "id": "eipalloc-0fd93e888bfc01691",
            "instance": "i-0990776ccc926d4b5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0126884f146f5b1be",
            "private_dns": "ip-10-0-0-41.ec2.internal",
            "private_ip": "10.0.0.41",
            "public_dns": "ec2-50-17-164-181.compute-1.amazonaws.com",
            "public_ip": "50.17.164.181",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Account": "rkreber",
              "Region": "US-EAST-1",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.ec2",
            "aws_internet_gateway.igw",
            "aws_key_pair.deployer",
            "aws_security_group.ec2-sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_ami.amazon-linux-2",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0150ccaf51ab55a51",
            "arn": "arn:aws:ec2:us-east-1:549661018596:instance/i-0990776ccc926d4b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "rkreber-ec2-profile",
            "id": "i-0990776ccc926d4b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "rkreber-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0126884f146f5b1be",
            "private_dns": "ip-10-0-0-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.41",
            "public_dns": "ec2-50-17-164-181.compute-1.amazonaws.com",
            "public_ip": "50.17.164.181",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Account": "rkreber",
                  "Region": "US-EAST-1",
                  "Terraform": "True"
                },
                "tags_all": {
                  "Account": "rkreber",
                  "Region": "US-EAST-1",
                  "Terraform": "True"
                },
                "throughput": 125,
                "volume_id": "vol-0e64e2e1fb93f9a88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cede32850bcdb96",
            "tags": {
              "Name": "rkreber-ec2"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-ec2",
              "Region": "US-EAST-1",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e08ebcf409e21c2c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.ec2-sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_ami.amazon-linux-2",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549661018596:internet-gateway/igw-038509bc50a5a849c",
            "id": "igw-038509bc50a5a849c",
            "owner_id": "549661018596",
            "region": "us-east-1",
            "tags": {
              "Name": "rkreber-igw"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-igw",
              "Region": "US-EAST-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02b2203a26ff3ec90"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549661018596:route-table/rtb-031935c5286da4f31",
            "id": "rtb-031935c5286da4f31",
            "owner_id": "549661018596",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038509bc50a5a849c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rkreber-public-rt"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-public-rt",
              "Region": "US-EAST-1",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b2203a26ff3ec90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004f4cf401e697bdb",
            "region": "us-east-1",
            "route_table_id": "rtb-031935c5286da4f31",
            "subnet_id": "subnet-06cede32850bcdb96"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549661018596:security-group/sg-0e08ebcf409e21c2c",
            "description": "Security group for webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e08ebcf409e21c2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rkreber-ec2-sg",
            "name_prefix": "",
            "owner_id": "549661018596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rkreber-sg"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-sg",
              "Region": "US-EAST-1",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b2203a26ff3ec90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549661018596:subnet/subnet-01dc4070fe9c6248f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc4070fe9c6248f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549661018596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rkreber-private-subnet"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-private-subnet",
              "Region": "US-EAST-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02b2203a26ff3ec90"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549661018596:subnet/subnet-06cede32850bcdb96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cede32850bcdb96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549661018596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rkreber-public-subnet"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-public-subnet",
              "Region": "US-EAST-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02b2203a26ff3ec90"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549661018596:vpc/vpc-02b2203a26ff3ec90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c11602921f77ab60",
            "default_route_table_id": "rtb-0db8c266e2ae1272e",
            "default_security_group_id": "sg-0cc5a83824be6d7ba",
            "dhcp_options_id": "dopt-0538d2f3180d828c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b2203a26ff3ec90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db8c266e2ae1272e",
            "owner_id": "549661018596",
            "region": "us-east-1",
            "tags": {
              "Name": "rkreber-vpc"
            },
            "tags_all": {
              "Account": "rkreber",
              "Name": "rkreber-vpc",
              "Region": "US-EAST-1",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}